# Basic-2D-Animation-Software

./: .gitignore  CMakeLists.txt  README.md
BTECAE_QT/include/: Camera.h  Layer.h  NGLScene.h  RGBA.h
BTECAE_QT/shaders/: PlaneFragment.glsl  PlaneVertex.glsl
BTECAE_QT/src/: Camera.cpp  Keyframe.cpp  NGLScene.cpp  Shape.cpp  main.cpp
BTECAE_QT/ui/: MainWindow.ui
include/: Keyframe.h  MainWindow.h  Shape.h  Timeline.h
src/: Layer.cpp  MainWindow.cpp  NGLSceneMouseControls.cpp  Timeline.cpp  delta_time.txt
